2014-11-18  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	* include/avr/sleep.h (set_sleep_mode): Remove SLEEP_MODE defines 
	for tiny and mega devices as well. Branch on presence of SM<n> 
	instead of device name.

2014-11-18  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	* include/avr/Makefile.am: Add new headers iom{48,88,168}a.h.
	* include/avr/io.h: Include them.
	* include/avr/iom48a.h: New.
	* include/avr/iom88a.h: Likewise.
	* include/avr/iom168a.h: Likewise.
	* include/avr/io2313.h: Add supported sleep modes.
	* include/avr/io2323.h: Likewise.
	* include/avr/io2333.h: Likewise.
	* include/avr/io2343.h: Likewise.
	* include/avr/io43u32x.h: Likewise.
	* include/avr/io43u35x.h: Likewise.
	* include/avr/io4414.h: Likewise.
	* include/avr/io4433.h: Likewise.
	* include/avr/io4434.h: Likewise.
	* include/avr/io76c711.h: Likewise.
	* include/avr/io8515.h: Likewise.
	* include/avr/io8535.h: Likewise.
	* include/avr/io90pwm1.h: Likewise.
	* include/avr/io90pwm161.h: Likewise.
	* include/avr/io90pwm216.h: Likewise.
	* include/avr/io90pwm2b.h: Likewise.
	* include/avr/io90pwm316.h: Likewise.
	* include/avr/io90pwm3b.h: Likewise.
	* include/avr/io90pwm81.h: Likewise.
	* include/avr/io90pwmx.h: Likewise.
	* include/avr/io90scr100.h: Likewise.
	* include/avr/ioa5272.h: Likewise.
	* include/avr/ioa5505.h: Likewise.
	* include/avr/ioa5790.h: Likewise.
	* include/avr/ioa5795.h: Likewise.
	* include/avr/ioa6285.h: Likewise.
	* include/avr/ioa6286.h: Likewise.
	* include/avr/ioa6289.h: Likewise.
	* include/avr/ioat94k.h: Likewise.
	* include/avr/iocan128.h: Likewise.
	* include/avr/iocan32.h: Likewise.
	* include/avr/iocan64.h: Likewise.
	* include/avr/iom103.h: Likewise.
	* include/avr/iom128.h: Likewise.
	* include/avr/iom1280.h: Likewise.
	* include/avr/iom1281.h: Likewise.
	* include/avr/iom1284.h: Likewise.
	* include/avr/iom1284p.h: Likewise.
	* include/avr/iom1284rfr2.h: Likewise.
	* include/avr/iom128a.h: Likewise.