@@ -1,3 +1,8 @@
+2014-11-20  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
+
+	* include/avr/sleep.h (set_sleep_mode): Branch on presence of 
+	SLEEP_SMODE<n>_bm for xmegas.
+
 2014-11-18  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
 
 	* include/avr/sleep.h (set_sleep_mode): Remove SLEEP_MODE defines 
